--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.3",
     "lucide-react": "^0.562.0",
     "react-router-dom": "^7.11.0",
-    "framer-motion": "^11.11.10"
+    "framer-motion": "^11.11.10",
+    "mongoose": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
